@@ -19,6 +19,7 @@ final class VmOptionsGenerator {
     '-Djdk.attach.allowAttachSelf=true',
     '-Djdk.module.illegalAccess.silent=true',
     '-Dkotlinx.coroutines.debug=off',
+    '-XX:+IgnoreUnrecognizedVMOptions', //todo[kb] remove when we find a way to remove outdated options like -XX:+UseConcMarkSweepGC
     '--add-opens=java.base/java.lang=ALL-UNNAMED',
     '--add-opens=java.base/java.util=ALL-UNNAMED',
     '--add-opens=java.base/jdk.internal.vm=ALL-UNNAMED',
@@ -30,7 +31,9 @@ final class VmOptionsGenerator {
     '--add-opens=java.desktop/javax.swing.text.html=ALL-UNNAMED',
     '--add-opens=java.desktop/sun.awt=ALL-UNNAMED',
     '--add-opens=java.desktop/sun.awt.image=ALL-UNNAMED',
+    '--add-opens=java.desktop/sun.awt.windows=ALL-UNNAMED',
     '--add-opens=java.desktop/sun.font=ALL-UNNAMED',
+    '--add-opens=java.desktop/sun.java2d=ALL-UNNAMED',
     '--add-opens=java.desktop/sun.swing=ALL-UNNAMED',
     '--add-opens=java.desktop/com.apple.eawt=ALL-UNNAMED',
     '--add-opens=java.desktop/com.apple.eawt.event=ALL-UNNAMED',
